@@ -1,3 +1,4 @@
+* Support limit and offset to ModelSQL count search and search_count
 * Apply view inheritance to board
 * Add RPC view_get method to View
 * Apply view inheritance to all matching elements
